--- a/final_project.qmd
+++ b/final_project.qmd
@@ -844,6 +844,15 @@ The line chart, @fig-finalhappinessovertimeplot, tracks happiness scores over fi
 # chart in 2019. Evaluate the increases and decreases that occur between
 # those four years.
 
+# Polishing: To achieve this final visualization, there were some changes that
+# were made to improve the clarity of the line plot. First, we cut down our 
+# number of countries from 20 (top 10, bottom 10), to 10 (top 5, bottom 5). 
+# This way, the resulting plot appears less cluttered. Additionally,
+# the countries in the key were placed in order from the happiest to the 
+# most unhappy countries, instead of alphabetical order. Lastly, the colors
+# and line type were altered to make it more colorblind-friendly, and overall,
+# more aesthetically pleasing. 
+
 # Need: the cleaned 2015 and 2019 data from the World Bank Data set
 
 # Plan
